--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
 }
 
 button {
+    border:none;
+    background-color: none;
     width: 100px;
     height: 100px;
     margin: 32px;
@@ -24,4 +26,12 @@ button {
     margin: 32px;
     width: 100px;
     height: 25px;
+}
+
+img {
+    margin: 0;
+    padding: 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
 }
